Finished. PDF included.

--- a/src/CS22310/Home.html
+++ b/src/CS22310/Home.html
@@ -8,8 +8,11 @@
     <meta name="author" content="">
 	<title>Home</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<link href="css/carousel.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
+	<link href="css/sticky-footer.css" rel="stylesheet">
+	
 </head>
 <body>
 
@@ -44,6 +47,7 @@
                 </li>
 				<li><a href="Our staff.html">Our staff</a></li>
 				<li><a href="Classes.html">Classes</a></li>
+				<li><a href="#">Feedback</a></li>
               </ul>
             </div>
           </div>
@@ -51,7 +55,11 @@
 
       </div>
     </div>
-	
+	<div id="notifcations" align=center>
+	<div class="alert alert-danger" role="alert">Jogging has been cancelled!</div>
+	<div class="alert alert-success" role="alert">Yoga has now been added!</div>
+	</div>
+
 	<!-- carousel ========================== -->
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -121,6 +129,7 @@
 	<div id="test" align=Center>
 	<a href="AdminPage.html"> Marking purposes only: <button type="button" class="btn btn-danger">Admin Page</button> </a>
 	</div>
+		
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
