--- a/src/CS22310/Our staff.html
+++ b/src/CS22310/Our staff.html
@@ -44,6 +44,7 @@
                 </li>
 				<li class="active"><a href="Our staff.html">Our staff</a></li>
 				<li><a href="Classes.html">Classes</a></li>
+				<li><a href="#">Feedback</a></li>
               </ul>
             </div>
           </div>
